--- a/views/home.twig
+++ b/views/home.twig
@@ -16,9 +16,11 @@
 				<div class="sub-intro-txt-mod-home">
 				<h3 class="sub-intro-txt">{{ intro.post_content }}</h3>
 					{% for sig in intro.sigs %}
+					<div class="team-signature-mod">
 						<div class="team-signature">
 							<img src="{{sig.signature.url}}" alt="{{sig.signature.alt}}" />
 						</div><!-- /team-signatures -->
+					</div><!-- /team-signature-mod -->	
 					{% endfor %}
 				<!-- <img class="team-signatures" src="/wp-content/themes/spokes/images/team-signatures.png"> -->
 				</div><!-- /sub-intro-txt-mod -->
