trouble shooting card effect on history tz

--- a/src/style.scss
+++ b/src/style.scss
@@ -1165,7 +1165,7 @@ em   	{	font-style: italic;	}
 	background-size: 250px;
 	background-repeat: repeat-x;
 	margin-bottom: 50px;
-	padding-bottom: 16px;
+	// padding-bottom: 16px;
 	min-height: 268px;
 	background-color: #fff;
 	@include trans;
