--- a/style.css
+++ b/style.css
@@ -2153,9 +2153,19 @@ a.history-link-mod {
   transition: all 0.2s ease-in;
   color: #7d7154;
 }
+/* line 1228, src/style.scss */
+.year-tz-txt-mod .tz-txt {
+  padding-bottom: 25px;
+}
+@media (min-width: 500px) {
+  /* line 1228, src/style.scss */
+  .year-tz-txt-mod .tz-txt {
+    padding-bottom: 0px;
+  }
+}
 
 /***  History-Post  ***/
-/* line 1232, src/style.scss */
+/* line 1240, src/style.scss */
 .history-aside {
   margin: 0 auto;
   position: static;
@@ -2166,14 +2176,14 @@ a.history-link-mod {
   padding: 30px 10px 0px 10px;
   font-size: 15px;
 }
-/* line 1242, src/style.scss */
+/* line 1250, src/style.scss */
 .history-aside a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1245, src/style.scss */
+/* line 1253, src/style.scss */
 .history-aside a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -2182,19 +2192,19 @@ a.history-link-mod {
   color: #9f916f;
 }
 @media (min-width: 500px) {
-  /* line 1232, src/style.scss */
+  /* line 1240, src/style.scss */
   .history-aside {
     padding: 0px 30px 0px 30px;
   }
 }
 @media (min-width: 600px) {
-  /* line 1232, src/style.scss */
+  /* line 1240, src/style.scss */
   .history-aside {
     padding: 0px 80px 30px 80px;
   }
 }
 @media (min-width: 1150px) {
-  /* line 1232, src/style.scss */
+  /* line 1240, src/style.scss */
   .history-aside {
     font-size: 12px;
     top: 1100px;
@@ -2205,46 +2215,46 @@ a.history-link-mod {
   }
 }
 @media (min-width: 1300px) {
-  /* line 1232, src/style.scss */
+  /* line 1240, src/style.scss */
   .history-aside {
     left: 10%;
   }
 }
 
-/* line 1274, src/style.scss */
+/* line 1282, src/style.scss */
 .caption-section-h {
   font: 800 23px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #444;
   margin: 20px 0px 15px 0px;
 }
 
-/* line 1280, src/style.scss */
+/* line 1288, src/style.scss */
 .caption-h {
   font: 800 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #555;
 }
 
-/* line 1285, src/style.scss */
+/* line 1293, src/style.scss */
 .history-aside-ul {
   margin-bottom: 25px;
 }
 
-/* line 1289, src/style.scss */
+/* line 1297, src/style.scss */
 .history-aside-item {
   font: 14px/150% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #888;
 }
-/* line 1293, src/style.scss */
+/* line 1301, src/style.scss */
 .history-aside-item:last-child {
   margin-bottom: 22px;
 }
 
-/* line 1298, src/style.scss */
+/* line 1306, src/style.scss */
 .history-post-img {
   margin-bottom: 25px;
 }
 
-/* line 1302, src/style.scss */
+/* line 1310, src/style.scss */
 .aside-rule {
   background: url(/wp-content/themes/spokes/images/bg-dots-long.png) 100% 15% no-repeat;
   background-size: 190px;
@@ -2252,20 +2262,20 @@ a.history-link-mod {
   height: 12px;
   background-repeat: repeat-x;
 }
-/* line 1309, src/style.scss */
+/* line 1317, src/style.scss */
 .lt-ie9 .aside-rule {
   background-color: #fff;
   background-image: none;
 }
 @media (min-width: 1150px) {
-  /* line 1302, src/style.scss */
+  /* line 1310, src/style.scss */
   .aside-rule {
     width: 240%;
     margin-left: -141%;
   }
 }
 
-/* line 1320, src/style.scss */
+/* line 1328, src/style.scss */
 .aside-section-mod {
   margin-bottom: 55px;
 }
@@ -2273,7 +2283,7 @@ a.history-link-mod {
 /* ============================================= */
 /*	Raffle Page    						   		 */
 /* ============================================= */
-/* line 1331, src/style.scss */
+/* line 1339, src/style.scss */
 .raffle-list {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
   border-top: 2px solid;
@@ -2281,7 +2291,7 @@ a.history-link-mod {
   border-color: #fff;
 }
 
-/* line 1338, src/style.scss */
+/* line 1346, src/style.scss */
 .raffle-list-mod {
   background-color: #fff;
   margin: 0 auto;
@@ -2297,19 +2307,19 @@ a.history-link-mod {
   text-align: center;
 }
 @media (min-width: 550px) {
-  /* line 1338, src/style.scss */
+  /* line 1346, src/style.scss */
   .raffle-list-mod {
     padding: 50px 100px 60px 90px;
   }
 }
 
-/* line 1355, src/style.scss */
+/* line 1363, src/style.scss */
 .raffle-list-item {
   font: 20px/200% "freight-text-pro", "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   text-align: left;
 }
 
-/* line 1360, src/style.scss */
+/* line 1368, src/style.scss */
 .raffle-list-bg {
   background-color: #fff;
   height: 515px;
@@ -2326,64 +2336,64 @@ a.history-link-mod {
   position: absolute;
 }
 
-/* line 1370, src/style.scss */
+/* line 1378, src/style.scss */
 .raffle-content {
   padding-bottom: 10px;
 }
-/* line 1373, src/style.scss */
+/* line 1381, src/style.scss */
 .raffle-content p {
   font: 17px/200% "freight-text-pro", "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   text-align: left;
 }
 @media (min-width: 700px) {
-  /* line 1373, src/style.scss */
+  /* line 1381, src/style.scss */
   .raffle-content p {
     font: 20px/200% "freight-text-pro", "Roboto Slab", Georgia, Times, "Times New Roman", serif;
     padding-bottom: 70px;
   }
 }
 
-/* line 1385, src/style.scss */
+/* line 1393, src/style.scss */
 .raffle-winners {
   padding: 40px 0px;
 }
 
-/* line 1389, src/style.scss */
+/* line 1397, src/style.scss */
 .raffle-shirt {
   max-width: 540px;
   width: 100%;
 }
 
-/* line 1394, src/style.scss */
+/* line 1402, src/style.scss */
 .raffle-sub-txt {
   border-bottom: 1px solid;
   border-color: #eee;
 }
-/* line 1398, src/style.scss */
+/* line 1406, src/style.scss */
 .raffle-sub-txt .sub-txt, .raffle-sub-txt .section-h1 {
   max-width: 570px;
   margin-bottom: 25px;
 }
 
-/* line 1405, src/style.scss */
+/* line 1413, src/style.scss */
 .raffle-sub-txt-mod p {
   font: 18px/160% "freight-text-pro", "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   margin-bottom: 25px;
 }
 @media (min-width: 700px) {
-  /* line 1405, src/style.scss */
+  /* line 1413, src/style.scss */
   .raffle-sub-txt-mod p {
     font-size: 20px;
   }
 }
 
-/* line 1415, src/style.scss */
+/* line 1423, src/style.scss */
 .raffle-ui-group {
   max-width: 1200px;
   margin: 0 auto;
 }
 @media (min-width: 800px) {
-  /* line 1415, src/style.scss */
+  /* line 1423, src/style.scss */
   .raffle-ui-group {
     *zoom: 1;
   }
@@ -2413,32 +2423,32 @@ a.history-link-mod {
 /* ============================================= */
 /*	Store	    						   		 */
 /* ============================================= */
-/* line 1432, src/style.scss */
+/* line 1440, src/style.scss */
 .closed-store {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
 }
 
-/* line 1436, src/style.scss */
+/* line 1444, src/style.scss */
 .closed-sign-mod {
   max-width: 620px;
   width: 100%;
   margin: 0 auto;
   padding-top: 0px;
 }
-/* line 1442, src/style.scss */
+/* line 1450, src/style.scss */
 .closed-sign-mod img {
   max-width: 600px;
   width: 100%;
 }
 @media (min-width: 700px) {
-  /* line 1436, src/style.scss */
+  /* line 1444, src/style.scss */
   .closed-sign-mod {
     padding-top: 90px;
     padding-bottom: 50px;
   }
 }
 
-/* line 1453, src/style.scss */
+/* line 1461, src/style.scss */
 .store-closed {
   text-align: center;
   font: 800 20px/130% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
@@ -2448,7 +2458,7 @@ a.history-link-mod {
 /* ============================================= */
 /*	Blog-Post   						   		 */
 /* ============================================= */
-/* line 1467, src/style.scss */
+/* line 1475, src/style.scss */
 .bfc-404 {
   padding: 0% 0%;
   background: url(/wp-content/themes/spokes/images/bfc-404.jpg) no-repeat center center;
@@ -2460,7 +2470,7 @@ a.history-link-mod {
   position: relative;
 }
 
-/* line 1478, src/style.scss */
+/* line 1486, src/style.scss */
 .txt-mod-404 {
   text-align: left;
   background-color: #000;
@@ -2476,7 +2486,7 @@ a.history-link-mod {
   max-width: 500px;
 }
 
-/* line 1489, src/style.scss */
+/* line 1497, src/style.scss */
 .h1-404 {
   font: 800 48px/120% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #fff;
@@ -2485,7 +2495,7 @@ a.history-link-mod {
   letter-spacing: 1px;
 }
 
-/* line 1497, src/style.scss */
+/* line 1505, src/style.scss */
 .txt-404 {
   font: 22px/148% "freight-text-pro", "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   color: #ddd;
@@ -2494,19 +2504,19 @@ a.history-link-mod {
 /* ============================================= */
 /*	Footer	    						   		 */
 /* ============================================= */
-/* line 1509, src/style.scss */
+/* line 1517, src/style.scss */
 footer {
   background-color: #1D1D1D;
   margin: 0 auto;
 }
 
-/* line 1514, src/style.scss */
+/* line 1522, src/style.scss */
 .ftr-mod {
   margin: 0 auto;
   max-width: 1200px;
 }
 @media (min-width: 1000px) {
-  /* line 1514, src/style.scss */
+  /* line 1522, src/style.scss */
   .ftr-mod {
     *zoom: 1;
   }
@@ -2533,31 +2543,31 @@ footer {
   }
 }
 
-/* line 1524, src/style.scss */
+/* line 1532, src/style.scss */
 .ftr-logo-mod {
   margin-bottom: 50px;
 }
 
-/* line 1528, src/style.scss */
+/* line 1536, src/style.scss */
 .ftr-logo {
   max-width: 300px;
   width: 100%;
   margin-bottom: 25px;
 }
 
-/* line 1534, src/style.scss */
+/* line 1542, src/style.scss */
 .contact-li-item {
   color: #eee;
   font: 400 16px/160% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
 }
-/* line 1538, src/style.scss */
+/* line 1546, src/style.scss */
 .contact-li-item a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1541, src/style.scss */
+/* line 1549, src/style.scss */
 .contact-li-item a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -2566,7 +2576,7 @@ footer {
   color: #555;
 }
 
-/* line 1548, src/style.scss */
+/* line 1556, src/style.scss */
 .sponsors {
   background-color: #f5f5f3;
   margin: 0 auto;
@@ -2574,7 +2584,7 @@ footer {
   border-top: 1px solid;
   border-color: #eee;
 }
-/* line 1555, src/style.scss */
+/* line 1563, src/style.scss */
 .sponsors .sponsors-mod {
   *zoom: 1;
   text-align: left;
@@ -2603,7 +2613,7 @@ footer {
   margin-right: 0;
 }
 @media (min-width: 700px) {
-  /* line 1555, src/style.scss */
+  /* line 1563, src/style.scss */
   .sponsors .sponsors-mod {
     *zoom: 1;
   }
@@ -2629,13 +2639,13 @@ footer {
     margin-right: 0;
   }
 }
-/* line 1566, src/style.scss */
+/* line 1574, src/style.scss */
 .sponsors .section-h1 {
   color: #000;
   text-align: left;
   margin-bottom: 30px;
 }
-/* line 1572, src/style.scss */
+/* line 1580, src/style.scss */
 .sponsors .sponsors-list-mod {
   -webkit-columns: 1;
   -moz-columns: 1;
@@ -2644,14 +2654,14 @@ footer {
   columns: 1;
   margin-bottom: 25px;
 }
-/* line 1576, src/style.scss */
+/* line 1584, src/style.scss */
 .sponsors .sponsors-list-mod a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1579, src/style.scss */
+/* line 1587, src/style.scss */
 .sponsors .sponsors-list-mod a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -2660,13 +2670,13 @@ footer {
   color: #bada55;
 }
 @media (min-width: 600px) {
-  /* line 1572, src/style.scss */
+  /* line 1580, src/style.scss */
   .sponsors .sponsors-list-mod {
     margin-bottom: 0px;
   }
 }
 @media (min-width: 900px) {
-  /* line 1572, src/style.scss */
+  /* line 1580, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 2;
     -moz-columns: 2;
@@ -2676,7 +2686,7 @@ footer {
   }
 }
 @media (min-width: 1200px) {
-  /* line 1572, src/style.scss */
+  /* line 1580, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 3;
     -moz-columns: 3;
@@ -2685,13 +2695,13 @@ footer {
     columns: 3;
   }
 }
-/* line 1598, src/style.scss */
+/* line 1606, src/style.scss */
 .sponsors .sponsor-list-item {
   font: 400 18px/175% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-align: left;
 }
 
-/* line 1604, src/style.scss */
+/* line 1612, src/style.scss */
 .sponsors-ul {
   display: inline-block;
   margin-right: 10%;
@@ -2699,12 +2709,12 @@ footer {
   text-align: left;
   vertical-align: top;
 }
-/* line 1611, src/style.scss */
+/* line 1619, src/style.scss */
 .sponsors-ul:last-child {
   margin-right: 0px;
 }
 
-/* line 1616, src/style.scss */
+/* line 1624, src/style.scss */
 .ftr-logo-bike {
   max-width: 160px;
   max-height: 211px;
@@ -2716,13 +2726,13 @@ footer {
   position: relative;
 }
 @media (min-width: 700px) {
-  /* line 1616, src/style.scss */
+  /* line 1624, src/style.scss */
   .ftr-logo-bike {
     display: block;
   }
 }
 
-/* line 1631, src/style.scss */
+/* line 1639, src/style.scss */
 .mailing-list-mod {
   max-width: 540px;
   width: 100%;
@@ -2733,7 +2743,7 @@ footer {
   background-color: #fff;
 }
 @media (min-width: 700px) {
-  /* line 1631, src/style.scss */
+  /* line 1639, src/style.scss */
   .mailing-list-mod {
     max-height: 228px;
     height: 228px;
@@ -2741,12 +2751,12 @@ footer {
     padding: 40px;
   }
 }
-/* line 1649, src/style.scss */
+/* line 1657, src/style.scss */
 .mailing-list-mod #mce-EMAIL, .mailing-list-mod #mc-embedded-subscribe {
   height: 35px;
   margin-bottom: 12px;
 }
-/* line 1654, src/style.scss */
+/* line 1662, src/style.scss */
 .mailing-list-mod #mce-EMAIL {
   border-color: #eee;
   -webkit-border-radius: 5px;
@@ -2759,14 +2769,14 @@ footer {
   border-bottom-color: #ddd;
   width: 229px;
 }
-/* line 1663, src/style.scss */
+/* line 1671, src/style.scss */
 .mailing-list-mod #mc-embedded-subscribe {
   width: 105px;
   letter-spacing: 1px;
   padding: 0px 2px 0px 2px;
 }
 
-/* line 1671, src/style.scss */
+/* line 1679, src/style.scss */
 .mailing-list-mod:before {
   height: 8px;
   content: '';
@@ -2780,13 +2790,13 @@ footer {
   background-size: 540px;
 }
 @media (min-width: 700px) {
-  /* line 1671, src/style.scss */
+  /* line 1679, src/style.scss */
   .mailing-list-mod:before {
     margin-left: -40px;
   }
 }
 
-/* line 1688, src/style.scss */
+/* line 1696, src/style.scss */
 .mailing-list-mod:after {
   height: 8px;
   content: '';
@@ -2800,13 +2810,13 @@ footer {
   background-size: 540px;
 }
 @media (min-width: 700px) {
-  /* line 1688, src/style.scss */
+  /* line 1696, src/style.scss */
   .mailing-list-mod:after {
     margin-left: -40px;
   }
 }
 
-/* line 1705, src/style.scss */
+/* line 1713, src/style.scss */
 .site-credit {
   background-color: #2A2B2A;
   color: #fff;
@@ -2816,14 +2826,14 @@ footer {
   letter-spacing: 1px;
   text-align: center;
 }
-/* line 1714, src/style.scss */
+/* line 1722, src/style.scss */
 .site-credit a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1717, src/style.scss */
+/* line 1725, src/style.scss */
 .site-credit a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -2832,7 +2842,7 @@ footer {
   color: #bada55;
 }
 
-/* line 1730, src/style.scss */
+/* line 1738, src/style.scss */
 .fb-box-mod {
   margin-top: 30px;
 }
@@ -2840,12 +2850,12 @@ footer {
 /* ============================================= */
 /*	Special FX    						   		 */
 /* ============================================= */
-/* line 1741, src/style.scss */
+/* line 1749, src/style.scss */
 .card-effect {
   position: relative;
 }
 
-/* line 1745, src/style.scss */
+/* line 1753, src/style.scss */
 .card-effect:before, .card-effect:after {
   z-index: -1;
   position: absolute;
@@ -2866,7 +2876,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 1759, src/style.scss */
+/* line 1767, src/style.scss */
 .card-effect:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
@@ -2877,12 +2887,12 @@ footer {
   left: auto;
 }
 
-/* line 1765, src/style.scss */
+/* line 1773, src/style.scss */
 .card-effect-lg {
   position: relative;
 }
 
-/* line 1769, src/style.scss */
+/* line 1777, src/style.scss */
 .card-effect-lg:before, .card-effect-lg:after {
   z-index: -1;
   position: absolute;
@@ -2903,7 +2913,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 1783, src/style.scss */
+/* line 1791, src/style.scss */
 .card-effect-lg:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
