adding site thumbnail image (FB linking and things). Removing bg image from blog feed on homepage.

--- a/src/style.scss
+++ b/src/style.scss
@@ -797,6 +797,10 @@ em   	{	font-style: italic;	}
 	}//page-mod
 }
 
+.blog-feed-home {
+	background-size: 0px;
+}
+
 .blog-post-tz {
 	background-color: #fff;
 	max-width: 768px;	
