--- a/views/home.twig
+++ b/views/home.twig
@@ -30,7 +30,7 @@
 			{% include 'raffle-ticket.twig' %}
 		{% endif %}
 
-		<section class="blog-feed">
+		<section class="blog-feed blog-feed-home">
 			<div class="page-mod">
 				<img class="section-icon" src="/wp-content/themes/spokes/images/icon-blog.png">
 				<h4 class="section-h1">Blog</h4>
