--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -33,6 +33,9 @@
 		  })();
 		</script>
 
+		<!-- Site Thumbnail -->
+		<link rel="image_src" href="http://www.bikesfightcancer.org/wp-content/themes/spokes/images/ftr-logo-bike.png">
+
 		<!-- FB Like Jams -->
 		<div id="fb-root"></div>
 		<script>(function(d, s, id) {
