updating thumb image to fit in square. forced fb cache to clear so image would show up. all is well.

--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -34,7 +34,7 @@
 		</script>
 
 		<!-- Site Thumbnail -->
-		<link rel="image_src" href="http://www.bikesfightcancer.org/wp-content/themes/spokes/images/ftr-logo-bike.png">
+		<link rel="image_src" href="http://www.bikesfightcancer.org/wp-content/themes/spokes/images/bfc-site-thumb.jpg">
 
 		<!-- FB Like Jams -->
 		<div id="fb-root"></div>
